# claude-code-memory

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: development-setup.md  implementation-plan.md  schema.md
src/claude_memory/: __init__.py  __main__.py  database.py  models.py  server.py
tests/: __init__.py  test_models.py
